<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sarah.represent.MainActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:background="@drawable/mainpic"
        android:layout_height="220dp">

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:id="@+id/greeting_layout"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/greeting"
            android:layout_width="200dp"
            android:textAlignment="center"
            android:text="@string/greeting"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <RelativeLayout
        android:layout_below="@+id/greeting_layout"
        android:id="@+id/enter_zip"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_alignParentLeft="true"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/enter_zip"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="80dp"
                android:inputType="number"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="60dp"
                android:text="@string/go"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/or"
            android:layout_height="wrap_content" />

        <TextView
            android:onClick="onSelectLocation"
            android:clickable="true"
            android:layout_centerInParent="true"
            android:text="@string/select_location"
            android:id="@+id/selectLocation"
            android:layout_width="100dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:textAlignment="center"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>
